# 3Designer

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  test_bridge.py
docs/: arquitetura.md
include/: CLI.hpp  Feature.hpp  FeatureTree.hpp  WorkPlane.hpp
scripts/: test_bridge.py  test_rebuild_and_measure.py
src/: CLI.cpp  CLI.hpp  Feature.cpp  Feature.hpp  FeatureTree.cpp  FeatureTree.hpp  WorkPlane.cpp  bindings.cpp  main.cpp
ui/: app.py  engine_proxy.py  viewer.py
